feat : update orders documentation
